# brachiograph

./: .gitignore  Cargo.toml  README.md  dioxus-cli.nix  shell.nix
.cargo/: config.toml
.github/workflows/: build-ui.yml  publish-ui.yml
crates/: Cargo.toml
crates/brachiograph/: Cargo.toml  README.md
crates/brachiograph/src/: geom.rs  lib.rs  pwm.rs
crates/brachiograph_host/: Cargo.toml
crates/brachiograph_host/src/: lib.rs
crates/brachiologo/: Cargo.toml  README.md
crates/brachiologo/examples/: basic.rs
crates/brachiologo/src/: lib.rs  main.rs  parse.rs  proc.rs  typ.rs
crates/brachiologo/tests/: basic.txt  common.rs  exec-failures.txt
crates/calibrate/: Cargo.toml
crates/calibrate/src/: main.rs
crates/feeder/: Cargo.toml
crates/feeder/src/: main.rs
crates/runner/: Cargo.toml
crates/runner/.helix/: languages.toml
crates/runner/src/: calibration_data.rs  main.rs  serial.rs
crates/template/: Cargo.toml
crates/template/src/: main.rs
crates/ui/: Cargo.toml
crates/ui/src/: main.rs  style.css
embedded/: Cargo.toml
embedded/src/: calibration_data.rs  main.rs  serial.rs
host/: Cargo.toml
host/brachiograph/: Cargo.toml  README.md
host/brachiograph/src/: geom.rs  lib.rs
host/feeder/src/: main.rs
host/ui/: Cargo.toml
host/ui/src/: main.rs
runner/: Cargo.toml
runner/src/: lib.rs  serial.rs
svelte-ui/: package-lock.json  package.json
svelte-ui/src-tauri/: Cargo.toml  tauri.conf.json
svelte-ui/src-tauri/src/: main.rs
svelte-ui/src/lib/: Connect.svelte  Edit.svelte  Greet.svelte  Run.svelte  Status.svelte  data.ts
svelte-ui/src/routes/: +page.svelte
tests/: integration.rs
