[package]
authors = ["Joe Neeman <joeneeman@gmail.com>"]
name = "brachiograph-runner"
edition = "2021"
version = "0.1.0"

#[lib]
#harness = false

# needed for each integration test
#[[test]]
#name = "integration"
#harness = false

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
brachiograph = { path = "../host/brachiograph", default-features = false }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-rtic = "1"
defmt = "0.3"
defmt-rtt = "0.4"
fixed = { version = "1.21.0", default-features = false }
fixed-macro = "1.2.0"
fugit = { version = "0.3.6", features = ["defmt"] }
itoa = "1.0.5"
nb = "1.0.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
ringbuffer = { version = "0.11.1", default-features = false }
stm32f1xx-hal = { version = "0.10", features = ["rt", "stm32f103", "medium"] }
systick-monotonic = "1.0.1"
usb-device = { version = "0.2.9", features = ["defmt"] }
usbd-serial = "0.1.1"

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
