[package]
name = "calibrate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
brachiograph = { version = "0.1.0", path = "../brachiograph" }
brachiograph_host = { version = "0.1.0", path = "../brachiograph_host" }
clap = { version = "4.0.32", features = ["derive"] }
crossterm = "0.25.0"
fontdb = "0.11.1"
kurbo = "0.9.0"
postcard = { version = "1.0.4", features = ["use-std"] }
serde = { version = "1.0.152", features = ["derive"] }
serialport = "4.2.0"
termion = "2.0.1"
usvg = "0.28.0"
