[package]
name = "feeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
brachiograph = { version = "0.1.0", path = "../brachiograph" }
clap = { version = "4.0.32", features = ["derive"] }
fontdb = "0.11.1"
kurbo = "0.9.0"
serialport = "4.2.0"
usvg = "0.28.0"
