[package]
name = "brachiograph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["std"]
std = []

[dependencies]
arrayvec = { version = "0.7.2", default-features = false }
cordic = "0.1.5"
fixed = { version = "1.21.0", default-features = false }
fixed-macro = "1.2.0"
fugit = { version = "0.3.6" }

[target.'cfg(target_os = "none")'.dependencies]
defmt = "0.3.2"
